@@ -1,5 +1,9 @@
 2004-08-09  Mikael Hallendal  <micke@imendio.com>
 
+	* src/planner-sql-plugin.c: Update to new PlannerConf api.
+
+2004-08-09  Mikael Hallendal  <micke@imendio.com>
+
 	* src/Makefile.am: Added planner-conf.h and planner-conf-gconf.c
 	* src/planner-conf-gconf.c: Added
 	* src/planner-conf.h: Added
